--- a/FoodTracker/Info.plist
+++ b/FoodTracker/Info.plist
@@ -8,6 +8,7 @@
 		<string>Poppins-ExtraBold.ttf</string>
 		<string>Poppins-ExtraLight.ttf</string>
 		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
