--- a/FoodTracker/Info.plist
+++ b/FoodTracker/Info.plist
@@ -9,6 +9,7 @@
 		<string>Poppins-ExtraLight.ttf</string>
 		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
+		<string>Poppins-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
