--- a/FoodTracker/Info.plist
+++ b/FoodTracker/Info.plist
@@ -10,6 +10,7 @@
 		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
