--- a/FoodTracker/Info.plist
+++ b/FoodTracker/Info.plist
@@ -11,6 +11,8 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Bold.ttf</string>
 		<string>Poppins-Regular.ttf</string>
+		<string>Kodchasan-Bold.ttf</string>
+		<string>Kodchasan-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
